[package]
name = "retrieve"
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = ["rust-patterns"]
description = "#[{pub_}mod_{pub_}use(a,b,c,...)] => {pub }mod a; {pub }use a::*; and also b,c,..."
documentation = "https://docs.rs/tia/"
edition = "2021"
keywords = ["mod", "use", "proc-macro", "pub", "attribute"]
license = "MIT"
repository = "https://github.com/usagi/retrieve"
version = "1.0.2"

[features]
default = []
print = []

[lib]
proc-macro = true

[dependencies]
syn = "1.0.91"
quote = "1.0.18"
